made changes to intro slide
added both questions and data source

--- a/presentation/presentation.Rmd
+++ b/presentation/presentation.Rmd
@@ -55,6 +55,11 @@ style_mono_light(base_color = "#800000")
 
 Introduction
 --
+- 
+1. Cold War Politics
+
+
+--
 
 - How has the dominance of the Soviet Union (/Russia as its main successor) and the United States changed throughout the cold war and after?
 --
@@ -62,7 +67,33 @@ Introduction
 
 
 - How do NATO and Warsaw Pact member-states compare in terms of medals won at the Olympics?
+--
+-
 
+
+
+
+
+
+
+2. Gender Equality
+--
+
+
+
+- How has female participation changed in Olympic Games from 1900 to 2016?
+--
+-
+
+
+- Which countries have seen highest contributions from females?
+
+--
+-
+
+
+
+- Data set source: [www.sports-reference.com](www.sports-reference.com)
 
 ---
 
