Added the countrycode source to the readme file

--- a/README.Rmd
+++ b/README.Rmd
@@ -313,9 +313,12 @@ Our presentation can be found [here](presentation/presentation.html).
 
 ## Data 
 
-rgriffin, 2018, `olympics.csv` from [Kaggle](https://www.kaggle.com/datasets/heesoo37/120-years-of-olympic-history-athletes-and-results?select=noc_regions.csv)
+rgriffin, 2018, `olympics.csv` from [Kaggle](https://www.kaggle.com/datasets/heesoo37/120-years-of-olympic-history-athletes-and-results?select=noc_regions.csv).
+
+Vincent Arel-Bundock, 2022, `countrycode` package version 1.3.1 -- [See documentation here](https://cran.r-project.org/web/packages/countrycode/countrycode.pdf).
 
 ## References
+
 Ellis Hughes (2022). tidytuesdayR: Access the Weekly 'TidyTuesday' Project Dataset. R package version
   1.0.2. https://CRAN.R-project.org/package=tidytuesdayR
   
