Made some changes to the repo organization

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,6 +1,6 @@
 ---
-title: Project 2
-author: Peewee Marten (Anshuman Pal, Konrat Pekkip)
+title: "Project 2"
+author: "Peewee Marten (Anshuman Pal, Konrat Pekkip)"
 output: github_document
 ---
 
