Created a rough outline of what our proposal will look like and changed the content of the README files.

--- a/README.Rmd
+++ b/README.Rmd
@@ -4,10 +4,4 @@ author: "Peewee Marten (Anshuman Pal, Konrat Pekkip)"
 output: github_document
 ---
 
-# proj2
-
-How do you make a Rmd file to knit the md file from?
-
-# publish results as a website using an R package
-
-Website, dashboard or shiny application are all ways we could present the data
+This is currently a placeholder for the final write-up of this project.
