Finished the data section of the proposal.

--- a/Proposal/Proposal.Rmd
+++ b/Proposal/Proposal.Rmd
@@ -17,9 +17,7 @@ While neither Anshuman nor Konrat are particularly talented Tennis players, we a
 
 ### Data
 
-TO BE FILLED IN -- BOTH HERE AND ALSO DESCRIBE THE DATASET IN THE [README FILE](Data/README.Rmd) OF THE DATA FOLDER
-
-If using particular dataset(s), a brief description of each dataset including the reason why you chose the particular dataset, its dataset, its dimensions and any other relevant metadata. (Make sure to load the data and use inline code for some of this information.)
+The data we're using comes from Jeff Sackmann's GitHub page. In the [data folder](data), there are two folders, one containing the data for the [men's ATP](data/atp), and one containing the data for the [women's WTA](data/wta). Both folders contain separate .csv files for matches (by year, starting in 1968/1980 for ATP and WTA, respectively) and rankings (by decade, starting in the 1970s/1980s for ATP and WTA, respectively). To learn more about the variables contained in the data as well as the contributors to the dataset, please refer to the README files. You can find the README file for the ATP data [here](data/atp/README.md), and the README file for the WTA data [here](data/wta/README.md).
 
 ### Research Question(s)
 
@@ -47,6 +45,6 @@ Week 5: (beginning May 30th): Finalize the coding work and the presentation.
 
 ## Repository Organization
 
-As it stands now, this repository contains several files and folders. This proposal exists in the [Proposal folder](Proposal), and our data can be found in the [Data folder](Data). Eventually, the [Presentation folder](Presentation) will contain our presentation, while the [README file](README.md) in the main repository will contain the write-up of our results. Furthermore, depending on whether or not we will go through with the plan to build a shiny app, we might create another folder to store .Rmd files and R scripts relevant for our analysis.
+As it stands now, this repository contains several files and folders. This proposal exists in the [Proposal folder](Proposal), and our data, alongside more detailed information on the datasets, can be found in the [data folder](data). Eventually, the [Presentation folder](Presentation) will contain our presentation, while the [README file](README.md) in the main repository will contain the write-up of our results. Furthermore, depending on whether or not we will go through with the plan to build a shiny app, we might create another folder to store .Rmd files and R scripts relevant for our analysis.
 
 The final organization of your project repository. This means describing the project organization in your proposal as well as implementing that organization in your repo. Create any folders needed and place a README.md in each folder explaining what goes in there.
